Add init_db.py, schema.sql and modify app.py and index.html to add tasks to a db and display them on the index page.

--- a/python/TaskList/templates/index.html
+++ b/python/TaskList/templates/index.html
@@ -2,4 +2,11 @@
 
 {% block content %}
     <h1>{% block title %} Welcome to Task App! {% endblock %}</h1>
+      {% for task in tasks %}
+        <a href="#">
+            <h2>{{ task['title'] }}</h2>
+        </a>
+        <span class="badge badge-primary">{{ task['created'] }}</span>
+        <hr>
+    {% endfor %}
 {% endblock %}
