Add pages for routes and remove about page.

--- a/python/portfolio_site/templates/app.html
+++ b/python/portfolio_site/templates/app.html
@@ -2,17 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to Hobby Tracker!</title>
+    <title>Art Blog</title>
 </head>
 <body>
-<p>Welcome to Hobby Tracker!</p>
-<button class="menu-option">Add a New Project</button>
-<button class="menu-option">Update an Existing Project</button>
-<button class="menu-option">Delete a Project</button>
-<button class="menu-option">View All Projects</button>
-<ul>
-    <li><a href="/about">About Us</a></li>
-    <li><a href="/login">Sign In or Register</a></li>
-</ul>
+<span><a href="login.html">Log In</a></span>
+<span><a href="blog.html">View Blog</a></span>
 </body>
 </html>
