--- a/python/portfolio_site/templates/login.html
+++ b/python/portfolio_site/templates/login.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign In or Register - Hobby Tracker</title>
+    <title>Log In - Art Blog</title>
 </head>
 <body>
-    <p>Lorem ipsum</p>
+    <p>Log in to access your blog dashboard.</p>
 </body>
 </html>
