--- a/python/miniblog/app/templates/user.html
+++ b/python/miniblog/app/templates/user.html
@@ -11,6 +11,6 @@
 </table>
     <hr>
     {% for post in posts %}
-    {$ include '_post.html' %}
+    {% include '_post.html' %}
     {% endfor %}
 {% endblock %}
