--- a/python/miniblog/app/templates/index.html
+++ b/python/miniblog/app/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h1>Hi, {{ current_user.username }}!</h1>
+    {% if form %}
     <form action="" method="post"> <!-- post submission form -->
         {{ form.hidden_tag() }}
         <p>
@@ -13,7 +14,8 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+    {% endif %}
     {% for post in posts %} <!-- for each post in the posts object, do as follows -->
-    <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
+        {% include '_post.html' %}
     {% endfor %}
 {% endblock %}
