--- a/python/miniblog/app/templates/index.html
+++ b/python/miniblog/app/templates/index.html
@@ -18,4 +18,10 @@
     {% for post in posts %} <!-- for each post in the posts object, do as follows -->
         {% include '_post.html' %}
     {% endfor %}
+    {% if prev_url %}
+    <a href="{{ prev_url }}">Newer posts</a>
+    {% endif %}
+    {% if next_url %}
+    <a href="{{ next_url }}">Older posts</a>
+    {% endif %}
 {% endblock %}
