--- a/python/miniblog/app/templates/_post.html
+++ b/python/miniblog/app/templates/_post.html
@@ -3,10 +3,13 @@
     <tr valign="top">
         <td><img src="{{ post.author.avatar(36) }}"></td>
         <td>
+            {% set user_link %}
             <a href="{{ url_for('user', username=post.author.username) }}">
                 {{ post.author.username }}
             </a>
-            said {{ moment(post.timestamp).fromNow() }}: <!-- date stamp -->
+            {% endset %}
+            {{ _('%(username)s said %(when)s',
+            username=user_link, when=moment(post.timestamp).fromNow()) }} <!-- date stamp -->
             <br>{{ post.body }}
         </td>
     </tr>
