--- a/python/miniblog/app/templates/base.html
+++ b/python/miniblog/app/templates/base.html
@@ -6,7 +6,7 @@
     {% if title %}
     <title>{{ title }} - Miniblog</title>
     {% else %}
-    <title>Welcome to Miniblog!</title>
+    <title>{{ _('Welcome to') }} Miniblog!</title>
     {% endif %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -19,21 +19,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('index') }}">{{ _('Home') }} <span class="sr-only">(current)</span></a>
               </li>
               {% if current_user.is_anonymous %}
               <li class="nav-item">
-                <a class="nav-link" href="#{{ url_for('login') }}">Login</a>
+                <a class="nav-link" href="#{{ url_for('login') }}">{{ _('Login') }}</a>
               </li>
               {% else %}
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+                <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">{{ _('Profile') }}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('explore') }}">Explore</a>
+                <a class="nav-link" href="{{ url_for('explore') }}">{{ _('Explore') }}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                <a class="nav-link" href="{{ url_for('logout') }}">{{ _('Logout') }}</a>
               </li>
             {% endif %}
             </ul>
