--- a/python/miniblog/app/templates/registration.html
+++ b/python/miniblog/app/templates/registration.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Register</h1>
+    <h1>{{ _('Register') }}</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
@@ -34,5 +34,5 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <p>{{ _('New User? <a href="{{ url_for('register') }}">Click to Register!</a>') }}</p>
 {% endblock %}
