--- a/python/miniblog/app/templates/index.html
+++ b/python/miniblog/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ _('Hi,') }} {{ current_user.username }}!</h1>
+    <h1>{{ _('Hi, %(username)s!') }}</h1>
     {% if form %}
     <form action="" method="post"> <!-- post submission form -->
         {{ form.hidden_tag() }}
