--- a/python/miniblog/app/templates/user.html
+++ b/python/miniblog/app/templates/user.html
@@ -4,26 +4,26 @@
 <table>
     <tr valign="top">
         <td><img src="{{ user.avatar(128) }}"></td>
-        <h1>User: {{ user.username }}</h1>
+        <h1>_('User'): {{ user.username }}</h1>
     </tr>
     <tr>
         <td>{% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
         {% if user.last_seen %}<p>{{ _('Last seen on: ') }}{{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
-        <p>{{ user.followers_count() }} {{ _('followers, ') }}{{ user.following_count() }} {{ _('following') }}.</p>
+        <p>{{ %(count)d _('followers, ') }}{{ %(count)d _('following') }}.</p>
         {% if user == current_user %}
         <p><a href="{{ url_for('edit_profile') }}">{{ _('Edit your profile') }}</a></p>
         {% elif not current_user.is_following(user) %}
         <p>
             <form action="{{ url_for('follow', username=user.username) }}" method="post">
                 {{ form.hidden_tag() }}
-                {{ form.submit(value='Follow') }}
+                {{ form.submit(value=_('Follow')) }}
             </form>
         </p>
         {% else %}
         <p>
             <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
                 {{ form.hidden_tag() }}
-                {{ form.submit(value='Unfollow') }}
+                {{ form.submit(value=_('Unfollow')) }}
             </form>
         </p>
         {% endif %}
