--- a/python/miniblog/app/templates/base.html
+++ b/python/miniblog/app/templates/base.html
@@ -54,5 +54,6 @@
     </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
         {{ moment.include_moment() }}
+        {{ moment.lang(g.locale) }} <!-- time for the locale -->
     </body>
 </html>
