--- a/python/miniblog/app/templates/user.html
+++ b/python/miniblog/app/templates/user.html
@@ -4,12 +4,12 @@
 <table>
     <tr valign="top">
         <td><img src="{{ user.avatar(128) }}"></td>
-        <h1>_('User'): {{ user.username }}</h1>
+        <h1>{{ _('User') }}: {{ user.username }}</h1>
     </tr>
     <tr>
         <td>{% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
         {% if user.last_seen %}<p>{{ _('Last seen on: ') }}{{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
-        <p>{{ %(count)d _('followers, ') }}{{ %(count)d _('following') }}.</p>
+        <p>{{ _('%(count)d followers', count=user.followers_count()) }}, {{ _('%(count)d following', count=user.following_count()) }}.</p>
         {% if user == current_user %}
         <p><a href="{{ url_for('edit_profile') }}">{{ _('Edit your profile') }}</a></p>
         {% elif not current_user.is_following(user) %}
