--- a/python/miniblog/app/templates/_post.html
+++ b/python/miniblog/app/templates/_post.html
@@ -11,6 +11,10 @@
             {{ _('%(username)s said %(when)s',
             username=user_link, when=moment(post.timestamp).fromNow()) }} <!-- date stamp -->
             <br>{{ post.body }}
+            <!-- {% if post.language and post.language != g.locale %} ## no translation of posts for now
+            <br><br>
+            <a href="#">{{ _('Translate') }}</a>
+            {% endif %} -->
         </td>
     </tr>
 </table>
