--- a/python/miniblog/app/templates/_post.html
+++ b/python/miniblog/app/templates/_post.html
@@ -16,8 +16,8 @@
             <br>
             <span id="post{{ post.id }}">{{ post.body }}</span>
             {% if post.language and post.language != g.locale %}
-            <br><br>
-            <span id="translation{{ post.id }}">
+            <br><br> <!-- hide the translate option for now -->
+            <span style="display: none;" id="translation{{ post.id }}">
                 <a href="javascript:translate(
                             'post{{ post.id }}',
                             'translation{{ post.id }}',
