--- a/python/miniblog/app/templates/base.html
+++ b/python/miniblog/app/templates/base.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-    <title>{{ title }} - Miniblog</title>
+    <title>{{ title }} - Chatter</title>
     {% else %}
-    <title>{{ _('Welcome to Miniblog') }}</title>
+    <title>{{ _('Welcome to Chatter') }}</title>
     {% endif %}
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="{{ url_for('main.index') }}">Miniblog</a>
+        <a class="navbar-brand" href="{{ url_for('main.index') }}">Chatter</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
